--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red_secret_data">#e61102</color>
+    <color name="orange_sensitive_data">#e6a202</color>
+    <color name="green_not_secret_data">#4fc202</color>
+    <color name="blue_no_data">#0078bd</color>
 </resources>
